...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/cnn_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            card_view:layout_constrainedWidth="true"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/source_name_cnn"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_timespan"
            card_view:layout_constraintHorizontal_chainStyle="spread_inside"
            card_view:layout_constraintStart_toEndOf="@id/cnn_news_guide_line_start"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_description" />

        <TextView
            android:id="@+id/cnn_news_timespan"
...
